RESOLVED FIXED176198
tab-size: 0px asserts
https://bugs.webkit.org/show_bug.cgi?id=176198
Summary tab-size: 0px asserts
Simon Fraser (smfr)
Reported 2017-08-31 17:07:55 PDT
"tab-size: 0px asserts" triggers an assertion in CSSPrimitiveValue::operator unsigned() const: template<> inline CSSPrimitiveValue::operator unsigned() const { if (primitiveType() == CSS_NUMBER) return value<unsigned>(); ASSERT_NOT_REACHED(); return 0; }
Attachments
Testcase (140 bytes, text/html)
2017-08-31 17:08 PDT, Simon Fraser (smfr)
no flags
Patch (3.92 KB, patch)
2017-10-30 11:18 PDT, Simon Fraser (smfr)
koivisto: review+
Simon Fraser (smfr)
Comment 1 2017-08-31 17:08:22 PDT
Created attachment 319544 [details] Testcase
Simon Fraser (smfr)
Comment 2 2017-10-30 11:18:42 PDT
Antti Koivisto
Comment 3 2017-10-30 11:20:33 PDT
Comment on attachment 325360 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=325360&action=review > Source/WebCore/css/parser/CSSPropertyParser.cpp:1116 > +static RefPtr<CSSValue> consumeTabSize(CSSParserTokenRange& range, CSSParserMode) > { > - RefPtr<CSSPrimitiveValue> parsedValue = consumeInteger(range, 0); > - if (parsedValue) > - return parsedValue; > - return consumeLength(range, cssParserMode, ValueRangeNonNegative); > + return consumeInteger(range, 0); You could add a FIXME mentioning we lack support for length values.
Simon Fraser (smfr)
Comment 4 2017-10-30 11:24:41 PDT
Simon Fraser (smfr)
Comment 5 2017-10-30 11:26:26 PDT
Filed bug 179022 to support tab-size with units.
Radar WebKit Bug Importer
Comment 6 2017-11-15 13:11:55 PST
Note You need to log in before you can comment on or make changes to this bug.