tab-size: 0px asserts https://bugs.webkit.org/show_bug.cgi?id=176198

Reviewed by Antti Koivisto.

Don't claim to support tab-size values with units. We don't, and they would become 0, rather
than fall back to the default as should happen.

Source/WebCore:

Enhanced fast/css/tab-size.html to test.

* css/parser/CSSPropertyParser.cpp:
(WebCore::consumeTabSize):

LayoutTests:

* fast/css/tab-size-expected.html:
* fast/css/tab-size.html:

Canonical link: https://commits.webkit.org/195157@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224193 268f45cc-cd09-0410-ab3c-d52691b4dbfc